Se comprobó que uno de los ejemplos no estaba disponible en el endpoint

--- a/views/welcome.html
+++ b/views/welcome.html
@@ -27,7 +27,7 @@ Api" href="https://github.com/arielarreola/test_umg_api_server_Ariel/blob/master
 <td style="height: 20px; width: 308px;">/diasfestivos/{a&ntilde;o}/{codpais};</td>
 <td style="height: 20px; width: 90px;">Dias Festivos</td>
 <td style="width: 126px; height: 20px;">NagerDate</td>
-<td style="width: 57px; height: 20px;">/diasfestivos/2021/UK</td>
+<td style="width: 57px; height: 20px;">/diasfestivos/2021/US</td>
 </tr>
 <tr style="height: 18px;">
 <td style="width: 308px; height: 18px;">/clima/{una ciudad}</td>
